--- a/Styles/home/home.scss
+++ b/Styles/home/home.scss
@@ -239,7 +239,7 @@ aside {
       "aside textarea . . . ."
       "aside . . . . .";
     .calender {
-      max-height: 500px;
+      max-height: 400px;
     }
   }
 }
